Swagger docs fully completed and some funcs responses were changed
