# docs/swagger.json
@@ -188,6 +188,12 @@
                                 "$ref": "#/definitions/user.UserWithProjectsDTO"
                             }
                         }
+                    },
+                    "404": {
+                        "description": "We couldn`t find users with such employee ID",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -253,7 +259,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Parse xlxs file and put profiles from it to DB",
+                "description": "Parse xlsx file and put profiles from it to DB",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -264,9 +270,30 @@
                     "users"
                 ],
                 "summary": "Метод для получения информации о профиле",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Xlsx file for parsing",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Successfully added all profiles!",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "422": {
+                        "description": "Error retrieving the File",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Error setting the file size || Error parsing file",
                         "schema": {
                             "type": "string"
                         }
@@ -292,9 +319,20 @@
                     "users"
                 ],
                 "summary": "Метод для добавления навыков",
+                "parameters": [
+                    {
+                        "description": "Skills what we want to add",
+                        "name": "skills",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/postgres.Skill"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Successfully added!",
                         "schema": {
                             "type": "string"
                         }
@@ -335,6 +373,12 @@
                                 "$ref": "#/definitions/user.UserDTO"
                             }
                         }
+                    },
+                    "404": {
+                        "description": "We couldn`t find such user",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -365,6 +409,16 @@
                 "name": {
                     "type": "string",
                     "example": "Iphone 12 Pro"
+                }
+            }
+        },
+        "postgres.Skill": {
+            "description": "skills which you want add to profile",
+            "type": "object",
+            "properties": {
+                "skills": {
+                    "type": "string",
+                    "example": "Some skills"
                 }
             }
         },
